# GEOBREAK

./: LICENSE
17-03-2025/: Makefile
17-03-2025/api/: .env  docker-compose.yaml  pyproject.toml
17-03-2025/api/api/: main.py  models.py
17-03-2025/api/docker/fastapi/: Dockerfile
17-03-2025/dashboard/: .env  docker-compose.yaml  pyproject.toml
17-03-2025/dashboard/dashboard/: main.py
17-03-2025/dashboard/docker/dashboard/: Dockerfile
17-03-2025/test/: .env  docker-compose.yaml  pyproject.toml
17-03-2025/test/docker/backend/: Dockerfile
17-03-2025/test/docker/dashboard/: Dockerfile
17-03-2025/test/test/: continuous.py  main.py
